Fix dropdown menu not appearing - remove overflow:hidden from work-order-bar, add z-index to menu-wrapper

--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -158,6 +158,7 @@
   position: relative;
   display: flex;
   cursor: pointer;
+  overflow: visible;
 }
 
 .timeline-cell {
