--- a/src/app/components/work-order-bar/work-order-bar.component.scss
+++ b/src/app/components/work-order-bar/work-order-bar.component.scss
@@ -53,6 +53,7 @@
   position: relative;
   flex-shrink: 0;
   margin-left: $padding-sm;
+  z-index: $z-index-dropdown;
 }
 
 .menu-button {
