--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -170,7 +170,6 @@
   cursor: pointer;
   transition: box-shadow $transition-normal;
   box-sizing: border-box;
-  overflow: hidden;
   white-space: nowrap;
 
   &:hover {
